feat: search features

--- a/lib/phoenix_yt_series_web/components/layouts/app.html.heex
+++ b/lib/phoenix_yt_series_web/components/layouts/app.html.heex
@@ -11,6 +11,7 @@
     <div class="">
       <.dropdown_comp
         id="route-dropdown"
+        btn_name="Select route"
         list={[
           "Home",
           "PostCodes"
